# EmotionRecog-inCrowd

./: .gitignore  requirements.txt
backend/: cpp_interface.py  emotion_model.py  face_detection.py  pipeline.py
cpp/: CMakeLists.txt  face_parallel.cpp
data/: festival.avif
docs/: parallelization.md  workflow.md
frontend/: main.py  main_img.py  main_vid_up.py  video_stream.py  visualization.py
